--- a/Shuffle/packages.config
+++ b/Shuffle/packages.config
@@ -4,9 +4,10 @@
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.21" targetFramework="net472" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.21" targetFramework="net472" />
   <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.21" targetFramework="net472" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.21" targetFramework="net472" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.26" targetFramework="net472" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.4" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
